# JumpNRun

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
.github/workflows/: cmake-multi-platform.yml
mvc/: Game.cpp  Game.h  Platform.cpp  Platform.h  Player.cpp  Player.h
pic/: background.h  pic_platform.h  player.h
